# vs-projects

./: .gitignore  .pre-commit-config.yaml  BACKLOG.md  FEATURE_SPEC_page_context_scraper.md  ISSUES_FOUND_AND_FIXES.md  PROJECT_KNOWLEDGE.md  README.md  coverage.xml  launch_ui.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  streamlit_app.py  test_output.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
cli/: __init__.py  config.py  evidence_generator.py  input_parser.py  main.py  report_generator.py  story_analyzer.py  test_orchestrator.py
docs/: IMPLEMENTATION_phase_a_auto_save.md  IMPLEMENTATION_phase_b_coverage.md  IMPLEMENTATION_phase_c_run_now.md
generated_tests/: example_test.py  test_ability_to_add_multiple_drivers_to_a_vehicle.py  test_add_driver_flow.py  test_cases_20260303_222704.json  test_cases_20260303_222704.xml  test_happy_path.py  test_report_20260303_222704.html  test_report_20260303_222704.md
src/: __init__.py  file_utils.py  llm_client.py  page_context_scraper.py  test_case.py  test_case_manager.py  test_generator.py
tests/: conftest.py  test_llm_client.py  test_test_generator.py
